# DiscordBot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: automod_config.yaml
src/: bot.py  test_bot.py
src/automoderation/: __init__.py  automod.py
src/join_roles/: __init__.py
tests/: test_automod.py
web/: app.py
web/templates/: config.html
wiki/: Home.md
